--- a/source/_posts/一键砸壳.md
+++ b/source/_posts/一键砸壳.md
@@ -2,7 +2,7 @@
 title: 一键砸壳
 date: 2020-03-17 13:39:57
 categories: iOS
-tags: [iOS,逆向,砸壳]
+tags: [iOS,逆向]
 ---
 # 一键砸壳 frida-ios-dump
 
@@ -12,47 +12,63 @@ tags: [iOS,逆向,砸壳]
 
 - 安装Homebrew
 
-- 安装python: brew install python
+- 安装python: 
 
-- 安装wget: brew install wget
+  ```shell
+  brew install python
+  ```
+
+- 安装wget: 
+
+  ```shell
+  brew install wget
+  ```
 
 - 安装pip:
-```
-wget https://bootstrap.pypa.io/get-pip.py
 
-sudo python get-pip.py
-```
-- 安装usbmuxd：brew install usbmuxd
+  ```shell
+  wget https://bootstrap.pypa.io/get-pip.py
+  
+  sudo python get-pip.py
+  ```
+- 安装usbmuxd:
+
+  ```shell
+  brew install usbmuxd
+  ```
 
 3. 安装frida
-```
-sudo pip install frida
-或者 sudo pip install frida –upgrade –ignore-installed six
-```
+
+   ```
+   sudo pip install frida
+   或者 sudo pip install frida –upgrade –ignore-installed six
+   ```
 4. 配置frida-ios-dump环境
 
 - 下载工程代码
-```
-sudo mkdir /opt/dump && cd /opt/dump && sudo git clone https://github.com/AloneMonkey/frida-ios-dump
-```
+
+  ```shell
+  sudo mkdir /opt/dump && cd /opt/dump && sudo git clone https://github.com/AloneMonkey/frida-ios-dump
+  ```
 - 安装依赖
-```
-sudo pip install -r /opt/dump/frida-ios-dump/requirements.txt --upgrade
-```
+
+  ```shell
+  sudo pip install -r /opt/dump/frida-ios-dump/requirements.txt --upgrade
+  ```
 - 方便使用dump.py设置
-```
-vim ~/.bash_profile
-alias dump.py="/opt/dump/frida-ios-dump/dump.py"
-source ~/.bash_profile
-```
 
+  ```shell
+  vim ~/.bash_profile
+  alias dump.py="/opt/dump/frida-ios-dump/dump.py"
+  source ~/.bash_profile
+  ```
 5. 使用
-```
-iproxy 2222 22
-dump.py -l
-dump.py QQ
-```
 
+   ```shell
+   iproxy 2222 22
+   dump.py -l
+   dump.py QQ
+   ```
 # [bagbak](https://github.com/ChiChou/bagbak "bagbak")砸壳
 
 有台iOS12.4.2越狱iPhone，用不了frida-ios-dump，可使用bagbak
@@ -60,21 +76,23 @@ dump.py QQ
 1. 安装 查看[bagbak](https://github.com/ChiChou/bagbak "bagbak")
 
 2. 使用
-```
-bagbak [bundle id or name]
-```
+
+   ```shell
+   bagbak [bundle id or name]
+   ```
 3. 其他
-```
-Options:
-   -l, --list             list apps
-   -H, --host <host>      hostname
-   -u, --uuid <uuid>      uuid of USB device
-   -o, --output <output>  output directory
-   -f, --override         override existing
-   -e, --executable-only  dump executables only
-   -z, --zip              create zip archive (ipa)
-   -h, --help             output usage information
- ```
+
+   ```shell
+   Options:
+      -l, --list             list apps
+      -H, --host <host>      hostname
+      -u, --uuid <uuid>      uuid of USB device
+      -o, --output <output>  output directory
+      -f, --override         override existing
+      -e, --executable-only  dump executables only
+      -z, --zip              create zip archive (ipa)
+      -h, --help             output usage information
+   ```
 
 
 
